WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243757
color-scheme should not propagate to viewport background if set on <body>
https://bugs.webkit.org/show_bug.cgi?id=243757
Summary
color-scheme should not propagate to viewport background if set on <body>
Aditya Keerthi
Reported
2022-08-09 17:31:22 PDT
The following test case renders differently on every browser. We should investigate why and understand the right behavior.
Attachments
reduction
(2.02 KB, text/html)
2022-08-09 17:31 PDT
,
Aditya Keerthi
no flags
Details
comparison
(265.14 KB, image/png)
2022-08-09 17:32 PDT
,
Aditya Keerthi
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-08-09 17:31:53 PDT
Created
attachment 461512
[details]
reduction
Aditya Keerthi
Comment 2
2022-08-09 17:32:22 PDT
Created
attachment 461513
[details]
comparison
Tim Nguyen (:ntim)
Comment 3
2022-08-14 12:00:33 PDT
Firefox & Chrome's behavior are correct here, `color-scheme: light dark` is set on `<body>`. The page background is provided the viewport, so the <html> tag. If you set `color-scheme: light dark` on `<html>`, then the behavior is the same across browsers.
Tim Nguyen (:ntim)
Comment 4
2022-08-14 12:04:18 PDT
As for the scrollbar, I believe Firefox simply doesn't adjust the scrollbar based on color-scheme (but does adjust based on the `scrollbar-color` property which Chrome & WebKit don't support).
Tim Nguyen (:ntim)
Comment 5
2022-08-14 12:06:00 PDT
I think the only actionable item here is the viewport background & <body> interaction.
Radar WebKit Bug Importer
Comment 6
2022-08-16 17:32:16 PDT
<
rdar://problem/98756494
>
Tim Nguyen (:ntim)
Comment 7
2022-08-17 23:51:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3440
EWS
Comment 8
2022-08-18 11:04:30 PDT
Committed
253565@main
(cbdcbdd4e8f1): <
https://commits.webkit.org/253565@main
> Reviewed commits have been landed. Closing PR #3440 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug