color-scheme should not propagate to viewport background if set on <body> https://bugs.webkit.org/show_bug.cgi?id=243757

Reviewed by Simon Fraser.

Change to web compatible behavior where setting the color-scheme on <body> no longer propagates it to <html> tag for scrollbar and
webpage background purposes. This change puts WebKit in-line with Gecko & Blink.

* LayoutTests/css-dark-mode/color-scheme-scrollbar-expected.txt:
* LayoutTests/css-dark-mode/color-scheme-scrollbar.html:
* Source/WebCore/page/FrameView.cpp:
(WebCore::FrameView::rendererForColorScheme const):

Canonical link: https://commits.webkit.org/253565@main